--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.3
   json_annotation: ^4.1.0
+  introduction_screen: ^2.1.0
 
 dev_dependencies:
   flutter_test:
