--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   json_annotation: ^4.1.0
   introduction_screen: ^2.1.0
   shared_preferences: ^2.0.8
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
