--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   introduction_screen: ^2.1.0
   shared_preferences: ^2.0.8
   intl: ^0.17.0
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
