--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
    <application
-        android:label="mi_sustainability"
-        android:icon="@mipmap/ic_launcher">
+        android:label="EcoMi"
+       android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
